interstitial ad done

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.mankirat.approck"
+        applicationId "com.bitsboy.imaganize"
         minSdk 23
         targetSdk 32
         versionCode 1
@@ -44,5 +44,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-
+    implementation project(':lib')
 }
