--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -37,4 +37,14 @@ dependencies {
 
     //implementation 'androidx.appcompat:appcompat:1.4.1'
     //implementation 'com.google.android.material:material:1.5.0'
+
+    //ad-mob
+    implementation 'com.google.android.gms:play-services-ads:20.6.0'
+    //ad-mob-mediation
+    //implementation 'com.google.android.ads:mediation-test-suite:2.0.0'
+    //implementation 'com.android.volley:volley:1.2.0'
+//    implementation 'com.google.ads.mediation:adcolony:4.6.5.0'
+//    implementation 'com.google.ads.mediation:applovin:10.3.4.0'
+//    implementation 'com.google.ads.mediation:facebook:6.8.0.0'
+//    implementation 'com.facebook.android:audience-network-sdk:6.8.0'
 }
