--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,9 +26,9 @@
             android:name=".HomeActivity"
             android:exported="false" />
 
-        <meta-data
+      <!--  <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="@string/ad_mob_id" />
+            android:value="@string/ad_mob_id" />-->
 
     </application>
 
