--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ buildscript {
     dependencies {
         //Google-Services
         //classpath 'com.google.gms:google-services:4.3.10'
+        //firebase-crashlytics
+        //classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
     }
 }
 
