--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,6 +1,10 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    //Google-Services
+    //id 'com.google.gms.google-services'
+    //firebase-crashlytics
+    //id 'com.google.firebase.crashlytics'
 }
 
 android {
@@ -31,20 +35,30 @@ android {
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    //implementation 'androidx.appcompat:appcompat:1.4.1'
-    //implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.5.0'
 
+    //firebase  When using the BoM, you don't specify versions in Firebase library dependencies
+    //implementation platform('com.google.firebase:firebase-bom:29.0.0')
+    //implementation 'com.google.firebase:firebase-crashlytics'
+    //implementation 'com.google.firebase:firebase-analytics-ktx'
+    //implementation 'com.google.firebase:firebase-config'
+    //implementation 'com.google.firebase:firebase-inappmessaging-display-ktx'
+
+    //in-app-purchase
+    implementation 'com.android.billingclient:billing-ktx:4.1.0'
     //ad-mob
     implementation 'com.google.android.gms:play-services-ads:20.6.0'
     //ad-mob-mediation
+    implementation 'com.google.ads.mediation:adcolony:4.7.0.0'
+    implementation 'com.google.ads.mediation:applovin:11.3.1.0'
+    implementation 'com.google.ads.mediation:facebook:6.8.0.0'
+    implementation 'com.facebook.android:audience-network-sdk:6.8.0'
+    //ad-mob-test-suite
     //implementation 'com.google.android.ads:mediation-test-suite:2.0.0'
     //implementation 'com.android.volley:volley:1.2.0'
-//    implementation 'com.google.ads.mediation:adcolony:4.6.5.0'
-//    implementation 'com.google.ads.mediation:applovin:10.3.4.0'
-//    implementation 'com.google.ads.mediation:facebook:6.8.0.0'
-//    implementation 'com.facebook.android:audience-network-sdk:6.8.0'
 }
